Removed the bibtex and hard coded the references

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -56,9 +56,14 @@ In the midway report we shall evaluate different approaches of machine learning 
 \vspace{-0.125in}
 \section{Papers to read}
 \vspace{-0.125in}
-We shall read papers \cite{personalizingimagesearchresults}, \cite{lornet} and \cite{Sebastiani:2002:MLA:505282.505283} to understand how individual components of the task can be achieved.
-\vspace{-0.125in}
-\bibliographystyle{plain}
-\bibliography{bibtex}
-\vspace{-0.125in}
+[1] Kristina Lerman, Anon Plangprasopchok, and Chio Wong. Personalizing Image Search Results
+on Flickr. \textit{Computing Research Repository}, abs/0704.1, 2007.
+
+[2] Fabrizio Sebastiani. Machine learning in automated text categorization. \textit{ACM Comput. Surv.},
+34(1):1$-$47, March 2002. 
+
+[3] Maryam Shokri1, Hamid R. Tizhoosh1, and Mohamed Kamel. Reinforcement Learning for Personalizing
+Image Search. \textit{In LORNET Annual E-Learning Conference on Intelligent Interactive
+Learning Object Repositories}, 2006.
+
 \end{document}
