--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,6 +1,6 @@
 \documentclass{article} % For LaTeX2e
 \usepackage{nips12submit_e,times}
-
+\renewcommand\refname{Papers To Read}
 \title{Semi-Supervised Learning for Image Meta-Labeling}
 
 
@@ -53,17 +53,12 @@ To complete this project we will write software that (a) parses the dataset to e
 \section{Midway Report Milestone}
 \vspace{-0.125in}
 In the midway report we shall evaluate different approaches of machine learning to learn the global model and write software that parses the dataset and runs the simulation. Each team member shall experiment with a different machine learning technique on a toy subset of the complete dataset. Further, Adwait will write the parsing software; Nitish will write the simulation software and Aravindh will discuss testing approaches feasible for the evaluation of the algorithms.
-\vspace{-0.125in}
-\section{Papers to read}
-\vspace{-0.125in}
-[1] Kristina Lerman, Anon Plangprasopchok, and Chio Wong. Personalizing Image Search Results
-on Flickr. \textit{Computing Research Repository}, abs/0704.1, 2007.
 
-[2] Fabrizio Sebastiani. Machine learning in automated text categorization. \textit{ACM Comput. Surv.},
-34(1):1$-$47, March 2002. 
+\nocite{personalizingimagesearchresults}
+\nocite{lornet}
+\nocite{Sebastiani:2002:MLA:505282.505283}
 
-[3] Maryam Shokri1, Hamid R. Tizhoosh1, and Mohamed Kamel. Reinforcement Learning for Personalizing
-Image Search. \textit{In LORNET Annual E-Learning Conference on Intelligent Interactive
-Learning Object Repositories}, 2006.
 
+\bibliography{bibtex.bib}
+\bibliographystyle{plain}
 \end{document}
