--- a/bibtex.bib
+++ b/bibtex.bib
@@ -33,3 +33,46 @@ year = {2006}
  address = {New York, NY, USA},
  keywords = {Machine learning, text categorization, text classification},
 }
+
+@article{Micusik08032012,
+author = {Micusik, Branislav and Košecká, Jana and Singh, Gautam}, 
+title = {Semantic parsing of street scenes from video}, 
+year = {2012}, 
+doi = {10.1177/0278364912437903}, 
+abstract ={Semantic models of the environment can significantly improve navigation and decision making capabilities of autonomous robots or enhance level of human and robot interaction. We present a novel approach for semantic segmentation of street scene images into coherent regions, while simultaneously categorizing each region as one of the predefined categories representing commonly encountered object and background classes. We formulate the segmentation on small blob-based superpixels and exploit a visual vocabulary tree as an intermediate image representation. The main novelty of our approach is the introduction of an explicit model of spatial co-occurrence of visual words associated with superpixels and utilization of appearance, geometry and contextual cues in a probabilistic framework. We demonstrate how individual cues contribute towards global segmentation accuracy and how their combination yields superior performance compared with the best known method on the challenging benchmark dataset which exhibits diversity of street scenes with varying viewpoints, a large number of categories, captured in daylight and dusk.}, 
+URL = {http://ijr.sagepub.com/content/early/2012/03/01/0278364912437903.abstract}, 
+eprint = {http://ijr.sagepub.com/content/early/2012/03/01/0278364912437903.full.pdf+html}, 
+journal = {The International Journal of Robotics Research} 
+}
+
+@inproceedings{Munoz:2010:SHL:1888212.1888218,
+ author = {Munoz, Daniel and Bagnell, J. Andrew and Hebert, Martial},
+ title = {Stacked hierarchical labeling},
+ booktitle = {Proceedings of the 11th European conference on Computer vision: Part VI},
+ series = {ECCV'10},
+ year = {2010},
+ isbn = {3-642-15566-9, 978-3-642-15566-6},
+ location = {Heraklion, Crete, Greece},
+ pages = {57--70},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=1888212.1888218},
+ acmid = {1888218},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+
+@inproceedings{Wang:2008:HML:1620163.1620244,
+ author = {Wang, Jue and Domingos, Pedro},
+ title = {Hybrid Markov logic networks},
+ booktitle = {Proceedings of the 23rd national conference on Artificial intelligence - Volume 2},
+ series = {AAAI'08},
+ year = {2008},
+ isbn = {978-1-57735-368-3},
+ location = {Chicago, Illinois},
+ pages = {1106--1111},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1620163.1620244},
+ acmid = {1620244},
+ publisher = {AAAI Press},
+} 
+
