--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -1,21 +1,144 @@
-\begin{thebibliography}{1}
+@PhdThesis{Gulshan12,
+  author       = "Gulshan, V.",
+  title        = "From Interactive to Semantic Image Segmentation",
+  school       = "University of Oxford",
+  year         = "2012",
+}
 
-\bibitem{Micusik08032012}
-Branislav Micusik, Jana Košecká, and Gautam Singh.
-\newblock Semantic parsing of street scenes from video.
-\newblock {\em The International Journal of Robotics Research}, 2012.
+@INPROCEEDINGS{Leibe04combinedobject,
+    author = {Bastian Leibe and Ales Leonardis and Bernt Schiele},
+    title = {Combined Object Categorization and Segmentation With An Implicit Shape Model},
+    booktitle = {In ECCV workshop on statistical learning in computer vision},
+    year = {2004},
+    pages = {17--32}
+}
 
-\bibitem{Munoz:2010:SHL:1888212.1888218}
-Daniel Munoz, J.~Andrew Bagnell, and Martial Hebert.
-\newblock Stacked hierarchical labeling.
-\newblock In {\em Proceedings of the 11th European conference on Computer
-  vision: Part VI}, ECCV'10, pages 57--70, Berlin, Heidelberg, 2010.
-  Springer-Verlag.
+@INPROCEEDINGS{Borenstein04combiningtop,
+    author = {E. Borenstein, E. Sharon, and S. Ullman},
+    title = {Combining Top-Down and Bottom-Up Segmentation},
+    booktitle = {CVPR},
+    year = {2004},
+}
 
-\bibitem{Wang:2008:HML:1620163.1620244}
-Jue Wang and Pedro Domingos.
-\newblock Hybrid markov logic networks.
-\newblock In {\em Proceedings of the 23rd national conference on Artificial
-  intelligence - Volume 2}, AAAI'08, pages 1106--1111. AAAI Press, 2008.
+@INPROCEEDINGS{cao:spatially,
+AUTHOR = "Liangliang Cao and Fei-Fei Li",
+TITLE = "Spatially Coherent Latent Topic Model for Concurrent Segmentation and Classification of Objects and Scenes",
+BOOKTITLE = "ICCV'07",
+PAGES = {1-8},
+YEAR = {2007}, 
+}
 
-\end{thebibliography}
+@inproceedings{Russell:2006:UMS:1153171.1153637,
+ author = {Russell, Bryan C. and Freeman, William T. and Efros, Alexei A. and Sivic, Josef and Zisserman, Andrew},
+ title = {Using Multiple Segmentations to Discover Objects and their Extent in Image Collections},
+ booktitle = {Proceedings of the 2006 IEEE Computer Society Conference on Computer Vision and Pattern Recognition - Volume 2},
+ series = {CVPR '06},
+ year = {2006},
+ isbn = {0-7695-2597-0},
+ pages = {1605--1614},
+ numpages = {10},
+ url = {http://dx.doi.org/10.1109/CVPR.2006.326},
+ doi = {10.1109/CVPR.2006.326},
+ acmid = {1153637},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+
+@inproceedings{lin07multiple,
+  author = {Lin Yang and Peter Meer and David J. Foran},
+  title = {{Multiple Class Segmentation Using A Unified Framework over Mean-Shift Patches}},
+  booktitle = {Computer Vision and Pattern Recognition},
+  year = {2007},
+  doi = {10.1109/CVPR.2007.383229},
+  masid = {4141339}
+} 
+
+@inproceedings{conf/bmvc/CsurkaP08,
+  added-at = {2011-05-03T00:00:00.000+0200},
+  author = {Csurka, Gabriela and Perronnin, Florent},
+  biburl = {http://www.bibsonomy.org/bibtex/207f4fc90d298a9b80ed33a8f9242b618/dblp},
+  booktitle = {BMVC},
+  crossref = {conf/bmvc/2008},
+  editor = {Everingham, Mark and Needham, Chris J. and Fraile, Roberto},
+  ee = {http://www.bmva.org/bmvc/2008/papers/68.pdf},
+  interhash = {3f43efc1ba6451779bd265f037a9a28e},
+  intrahash = {07f4fc90d298a9b80ed33a8f9242b618},
+  isbn = {978-1-901725-36-0},
+  keywords = {dblp},
+  publisher = {British Machine Vision Association},
+  timestamp = {2011-05-03T00:00:00.000+0200},
+  title = {A Simple High Performance Approach to Semantic Segmentation.},
+  url = {http://dblp.uni-trier.de/db/conf/bmvc/bmvc2008.html#CsurkaP08},
+  year = 2008
+}
+
+@inproceedings{Kumar:2005:OC:1068507.1068889,
+ author = {Kumar, M. Pawan and Torr, Philip H.  S. and Zisserman, A.},
+ title = {OBJ CUT},
+ booktitle = {Proceedings of the 2005 IEEE Computer Society Conference on Computer Vision and Pattern Recognition (CVPR'05) - Volume 1 - Volume 01},
+ series = {CVPR '05},
+ year = {2005},
+ isbn = {0-7695-2372-2},
+ pages = {18--25},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/CVPR.2005.249},
+ doi = {10.1109/CVPR.2005.249},
+ acmid = {1068889},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA}
+} 
+
+@INPROCEEDINGS{Richard04multiscaleconditional,
+    author = {Xuming He Richard and Richard S. Zemel and Miguel Á. Carreira-perpiñán},
+    title = {Multiscale Conditional Random Fields for Image Labeling},
+    booktitle = {In CVPR},
+    year = {2004},
+    pages = {695--702}
+}
+
+@inproceedings{Kumar:2005:HFF:1097115.1097790,
+ author = {Kumar, Sanjiv and Hebert, Martial},
+ title = {A Hierarchical Field Framework for Unified Context-Based Classification},
+ booktitle = {Proceedings of the Tenth IEEE International Conference on Computer Vision - Volume 2},
+ series = {ICCV '05},
+ year = {2005},
+ isbn = {0-7695-2334-X-02},
+ pages = {1284--1291},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/ICCV.2005.9},
+ doi = {10.1109/ICCV.2005.9},
+ acmid = {1097790},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA}
+} 
+
+@INPROCEEDINGS{Shotton06textonboost:joint,
+    author = {J. Shotton and J. Winn and C. Rother and A. Criminisi},
+    title = {Textonboost: Joint appearance, shape and context modeling for multi-class object recognition and segmentation},
+    booktitle = {In ECCV},
+    year = {2006},
+    pages = {1--15}
+}
+
+@INPROCEEDINGS{Domingos06unifyinglogical,
+    author = {Pedro Domingos and Stanley Kok and Hoifung Poon and Matthew Richardson and Parag Singla},
+    title = {Unifying logical and statistical AI},
+    booktitle = {Proceedings of the Twenty-First National Conference on Artificial Intelligence},
+    year = {2006},
+    pages = {2--7},
+    publisher = {AAAI Press}
+}
+
+@MISC{Wang_hybridmarkov,
+    author = {Jue Wang and Pedro Domingos},
+    title = {Hybrid Markov Logic Networks},
+    year = {}
+}
+
+@INPROCEEDINGS{Richardson06markovlogic,
+    author = {Matthew Richardson and Pedro Domingos},
+    title = {Markov Logic Networks},
+    booktitle = {Machine Learning},
+    year = {2006},
+    pages = {2006}
+}
