--- a/Mid Term/midway_report.tex
+++ b/Mid Term/midway_report.tex
@@ -31,12 +31,17 @@ Adwait Gandhe \\
 \maketitle
 
 \begin{abstract}
-In this paper, we propose a new approach for Semantic Segmentation using Hybrid Markov Logic Networks. 
+Semantic segmentation is the process of partitioning pixels in an image into categories and is a high level vision problem. Increasing the number of labels increases the complexity of the problem further. Markov Logic Networks (MLN) allow us to handle the uncertainty and complexity in a single framework, whereas Hybrid Markov Logic Networks (HMLN) are an extension of the MLNs that allow the continuous properties and functions over those properties as features.  In this paper, we propose a method for semantic segmentation using Hybrid Markov Logic Networks, which integrate logical and statistical learning. We test our results on the CAMVID dataset (Cambridge-Driving Labeled Video Database) and compare them against the results obtained using Naive Bayes method. 
 \end{abstract}
 
 
 \section{Introduction}
 
+Semantic segmentation is the process of classification of an image at the pixel level, which involves assigning a class label to each pixel of the image. Recognition of such semantic labels is an important problem in computer vision for understanding the underlying information in an image. While classical segmentation techniques group together the pixels based on low level features, semantic segmentation adopts a supervised learning approach. Several techniques proposed for semantic segmentation make use of low level features and a learning framework to combine them with their higher level labels.   \cite{Leibe04combinedobject} is one of the first approaches for simultaneous object segmentation and recognition that uses an Implicit Shape Model, which integrates both capabilities into a common probabilistic framework. \cite{cao:spatially} proposes a generative model based on the bag of words representation for such simultaneous recognition and segmentation. \cite{Borenstein04combiningtop} discusses how to combine bottom-up and top-down approaches into a single figure ground segmentation process that draws merits from both the approaches. \cite{Russell:2006:UMS:1153171.1153637} uses topic discovery models to learn the objects and choose the right segmentation. \cite{lin07multiple} propose a similar approach using bag of keypoints model integrated over mean-shift patches. \cite{conf/bmvc/CsurkaP08} propose a method based on some of these approaches for scoring low-level patches according to their class relevance and propagating these posterior probabilities to pixels. Contrary to these methods, certain approaches use random fields to incorporate local cues and impart global control without implementing low level segmentation. \cite{Kumar:2005:OC:1068507.1068889} propose a Bayesian method for combining up-down and bottom-up cues. \cite{Richard04multiscaleconditional} and \cite{Kumar:2005:HFF:1097115.1097790} use conditional random fields for this purpose. \cite{Shotton06textonboost:joint} discusses an approach to learning a discriminative model of object classes incorporating appearance, shape and context information efficiently. 
+
+The motivation behind this work is the second of these approaches that uses a random field for using local cues and learning the labels globally. \cite{Domingos06unifyinglogical} discusses how Markov Logic combines the complexity and uncertainty by attaching weights to first-order formulas and viewing them as templates for features of Markov Networks. Markov Logic Networks (MLNs) \cite{Richardson06markovlogic} combine first-order logic and Markov networks and allow us to handle complexity and uncertainty in one consistent framework. Hybrid Markov Logic Networks (HMLNs)\cite{Wang_hybridmarkov} also allow for continuous properties to appear as features. 
+
+This paper is structured as follows. Section 2 discusses the related work in semantic segmentation and Hybrid Markov Logic Networks. In section 3, we discuss the method that we have proposed for the semantic segmentation. The experiments conducted and the results obtained are presented in section 4. As this is the mid-term report, we have described the design of upcoming experiments in section 6 and the work undertaken by each of the authors in section 7.  
 
 %------------------------------------------------------------------------------------------
 
@@ -63,7 +68,7 @@ Examples of numeric terms and predicates in this Markov logic network are:
 An example of a formula in this hybrid Markov logic network that use these predicates and numeric terms are :
 
 \begin{equation*}
-	[isNeighbor(s_i,s_j) \Rightarro (isLabel(s_i,l_k) \Leftrightarrow isLabel(s_k,l_m))]*(featureDistance(s_i, s_k, f_m))
+	[isNeighbor(s_i,s_j) \Rightarrow (isLabel(s_i,l_k) \Leftrightarrow isLabel(s_k,l_m))]*(featureDistance(s_i, s_k, f_m))
 \end{equation*}
 
 \noindent This formula encodes the following two beliefs about how and why labels can propagate in the image.
@@ -241,4 +246,6 @@ Therefore, we propose to take a middle ground approach that will produce densely
 
 %------------------------------------------------------------------------------------------\bibliography{midway_report}
 \bibliographystyle{plain}
+\bibliography{midway_report}
+
 \end{document}
