--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -14,7 +14,7 @@
 }
 
 @INPROCEEDINGS{Borenstein04combiningtop,
-    author = {E. Borenstein, E. Sharon, and S. Ullman},
+    author = {E. Borenstein and E. Sharon and S. Ullman},
     title = {Combining Top-Down and Bottom-Up Segmentation},
     booktitle = {CVPR},
     year = {2004},
@@ -58,7 +58,6 @@ YEAR = {2007},
   author = {Csurka, Gabriela and Perronnin, Florent},
   biburl = {http://www.bibsonomy.org/bibtex/207f4fc90d298a9b80ed33a8f9242b618/dblp},
   booktitle = {BMVC},
-  crossref = {conf/bmvc/2008},
   editor = {Everingham, Mark and Needham, Chris J. and Fraile, Roberto},
   ee = {http://www.bmva.org/bmvc/2008/papers/68.pdf},
   interhash = {3f43efc1ba6451779bd265f037a9a28e},
@@ -142,3 +141,19 @@ YEAR = {2007},
     year = {2006},
     pages = {2006}
 }
+
+@incollection {Chen2012,
+   author = {Chen, Xiaowu and Li, Qing and Song, Yafei and Jin, Xin and Zhao, Qinping},
+   affiliation = {State Key Laboratory of Virtual Reality Technology and Systems, School of Computer Science and Engineering, Beihang University, Beijing, China},
+   title = {Supervised Geodesic Propagation for Semantic Label Transfer},
+   booktitle = {Computer Vision – ECCV 2012},
+   series = {Lecture Notes in Computer Science},
+   editor = {Fitzgibbon, Andrew and Lazebnik, Svetlana and Perona, Pietro and Sato, Yoichi and Schmid, Cordelia},
+   publisher = {Springer Berlin / Heidelberg},
+   isbn = {978-3-642-33711-6},
+   keyword = {Computer Science},
+   pages = {553-565},
+   volume = {7574},
+   year = {2012}
+}
+
