--- a/Mid Term/midway_report.tex
+++ b/Mid Term/midway_report.tex
@@ -45,11 +45,18 @@ This paper is structured as follows: Section \ref{sec:Related} discusses the rel
 
 \section{Related Work}
 \label{sec:Related}
-\subsection{sec:Geo}
 
 \cite{Leibe04combinedobject} is one of the first approaches for simultaneous object segmentation and recognition that uses an Implicit Shape Model, which integrates both capabilities into a common probabilistic framework. \cite{cao:spatially} proposes a generative model based on the bag of words representation for such simultaneous recognition and segmentation. \cite{Borenstein04combiningtop} discusses how to combine bottom-up and top-down approaches into a single figure ground segmentation process that draws merits from both the approaches. \cite{Russell:2006:UMS:1153171.1153637} uses topic discovery models to learn the objects and choose the right segmentation. \cite{lin07multiple} propose a similar approach using bag of keypoints model integrated over mean-shift patches. \cite{conf/bmvc/CsurkaP08} propose a method based on some of these approaches for scoring low-level patches according to their class relevance and propagating these posterior probabilities to pixels. Contrary to these methods, certain approaches use random fields to incorporate local cues and impart global control without implementing low level segmentation. \cite{Kumar:2005:OC:1068507.1068889} propose a Bayesian method for combining up-down and bottom-up cues. \cite{Richard04multiscaleconditional} and \cite{Kumar:2005:HFF:1097115.1097790} use conditional random fields for this purpose. \cite{Shotton06textonboost:joint} discusses an approach to learning a discriminative model of object classes incorporating appearance, shape and context information efficiently. 
 
 The motivation behind this work is the second of these approaches that uses a random field for using local cues and learning the labels globally. \cite{Domingos06unifyinglogical} discusses how Markov Logic combines the complexity and uncertainty by attaching weights to first-order formulas and viewing them as templates for features of Markov Networks. Markov Logic Networks (MLNs) \cite{Richardson06markovlogic} combine first-order logic and Markov networks and allow us to handle complexity and uncertainty in one consistent framework. Hybrid Markov Logic Networks (HMLNs)\cite{Wang_hybridmarkov} also allow for continuous properties to appear as features. We attempt to use HMLNs for semantic segmentation and test our results using the CAMVID dataset. 
+
+\subsection{Supervised Geodesic Propagation for Semantic Label Transfer}
+\label{sec:Geo}
+
+A recent approach for semantic segmentation is to use a learned label transfer confidence function to transfer labels between neighboring superpixels based on the geodesic distance metric \cite{Chen2012}.  A graph of all adjacent superpixels is constructed where the weights between edges are calculated from various features of the image such as its texture and the strength of its edges. The geodesic distance metric is then obtained by integrating over these edges from one superpixel to another. Finally, labels are iteratively propagated based on geodesic distance from seeds to to other super pixels
+
+This paper employs several useful tools for image segmentation. First its use of superpixels, which are groups of similar pixels in terms of both position and appearance, allows represents the important information in the images in a compressed and easy to process manner. Second, constructing graphs of superpixels allowed the authors to express how and where labels can propagate. Finally, propagating labels iteratively allows one to obtain a semantic segmentation without needing to minimize a cost function.
+
 %------------------------------------------------------------------------------------------
 
 \section{Attempted Methods}
