Updated Related Work

--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -157,3 +157,9 @@ YEAR = {2007},
    year = {2012}
 }
 
+@INPROCEEDINGS{SegmentRegionsParts,
+    author = {P. Arbelaez, B. Hariharan, C. Gu, S. Gupta, L. Bourdev and J. Malik},
+    title = {Semantic Segmentation using Regions and Parts},
+    booktitle = {In CVPR},
+    year = {2012},
+}
