Updated with citations

--- a/Mid Term/midway_report.bib
+++ b/Mid Term/midway_report.bib
@@ -163,3 +163,18 @@ YEAR = {2007},
     booktitle = {In CVPR},
     year = {2012},
 }
+
+@INPROCEEDINGS{IterContFor12,
+    author = {Björn Fröhlich, Erik Rodner and Joachim Denzler},
+    title = {Semantic Segmentation with Millions of Features: Integrating Multiple Cues in a Combined Random Forest Approach},
+    booktitle = {In ACCV},
+    year = {2012},
+}
+
+@techreport{alchemy,
+	author = {Stanley Kok, Marc Sumner, Matthew Richardson, Parag Singla, Hoifung Poon, Daniel Lowd, Jue Wang, Aniruddh Nath and Pedro Domingos},
+	institution = {Department of Computer Science and Engineering, University of Washington, Seattle, WA},
+	title = {The Alchemy System for Statistical Relational AI},
+	year = {2010},
+	url = {http://alchemy.cs.washington.edu}
+}
